small editorial changes

--- a/thesis/content/chp-2-emotion.tex
+++ b/thesis/content/chp-2-emotion.tex
@@ -72,7 +72,7 @@ When evaluating affective interfaces and interactions in HCI, one of the most im
 Self-report measures classify the emotional state of an individual by directly questioning them. This is usually done through a familiar language and vocabulary, or sometimes by using images that carry a common meaning within different languages and cultures. This is in fact trying to find out about an individual's emotional state through his or her verbal descriptions, and it can have different forms like rating scales, standardized checklists, questionnaires, semantic graphical differentials and projective methods. Self-report is maybe the simplest and easiest way to approach the issue of affect measurement, and it suffers some major weaknesses. Criticisms of self-report methods include the possibility that they draw attention to what the experimenter is trying to measure, that they fail to measure mild (low intensity) emotions, and that they are lack construct validity ~\cite{isen2007some}.
 
 \subsubsection{Game Engagement/Experience Questionnaire}
-The Game Engagement/Experience Questionnaire (GEQ) measures a gamer's engagement during video game play ~\cite{brockmyer2009development}. This questionnaire consists of 19 items scored on a Likert scale. This questionnaire specifically measures engagement level as absorption, flow, presence and immersion. Cronbach's alpha for the current 19-item version of the GEQ is .85. The Rasch estimate of person reliability (the Rasch analog to Cronbach's alpha) for the 19-item version is .83 and the item reliability is .96 ~\cite{brockmyer2009development}. In this work, this questionnaire is used as a subjective measure in Chapter ~\ref{chap:exprm}.
+The Game Engagement/Experience Questionnaire (GEQ) measures a gamer's engagement during video game play ~\cite{brockmyer2009development}. This questionnaire consists of 19 items scored on a Likert scale. This questionnaire specifically measures engagement level as absorption, flow, presence and immersion. Cronbach's alpha for the current 19-item version of the GEQ is .85. The Rasch estimate of person reliability (the Rasch analog to Cronbach's alpha) for the 19-item version is .83 and the item reliability is .96 ~\cite{brockmyer2009development}.% In this work, this questionnaire is used as a subjective measure in Chapter ~\ref{chap:exprm}.
 
 \subsubsection{Intrinsic Motivation Inventory}
 The Intrinsic Motivation Inventory (IMI) utilizes several sub-scales that relate to user experience during a targeted activity ~\cite{ryan1983relation}. This questionnaire is a useful measure for interactive technologies such as games and has been utilized in several studies. For this study, the Interest-Enjoyment sub-scale that contains 5 questions, the Effort sub-scale that contains 4 questions, and the Pressure-Tension sub-scale that contains 4 questions was used. The interest-enjoyment sub-scale is associated with self-reported intrinsic motivation. More information about this questionnaire and the experiment can be found in chapter ~\ref{chap:exprm}.
@@ -132,7 +132,7 @@ On an ECG, the heart rate is measured using the R wave to R wave interval (RR in
 {ekg-rr-interval.pdf}
 {ekg-rr-interval}
 
-A Blood Volume Pulse sensor (BVP or photoplethysmograph) or Pulse oximetry are  comparatively non-invasive methods for monitoring an individual's pulse. In BVP, an infra-red beam in bounced against a skin surface and measures the pulse by looking at the amount of reflected light. The reflected amount of light would change by passing through a different volume of blood in the skin. Therefore when there is a larger volume of blood in the skin, its red color causes it to absorb larger amount of other colors and more red color is reflected, but when the skin does not contain large volumes of blood, more amounts of other colors are reflected. %todo: add ref
+A Blood Volume Pulse sensor (BVP or photoplethysmograph) or Pulse oximetry are comparatively non-invasive methods for monitoring an individual's pulse. In BVP, an infra-red beam in bounced against a skin surface and measures the pulse by looking at the amount of reflected light. The reflected amount of light would change by passing through a different volume of blood in the skin. Therefore when there is a larger volume of blood in the skin, its red color causes it to absorb larger amount of other colors and more red color is reflected, but when the skin does not contain large volumes of blood, more amounts of other colors are reflected. %todo: add ref
 Using the BVP signal in addition to the heart rate, the software can usually also calculate the inter-beat interval. The amplitude of the BVP deviation can also be a useful measure. Heart Rate Variability can also be calculated with the BVP.
 
 \img
