--- a/thesis/content/chp-5-exprm.tex
+++ b/thesis/content/chp-5-exprm.tex
@@ -43,7 +43,7 @@ GSR sensors wired to the signal decoder can result in constraints to participant
 {gsr-attached.jpg}
 {gsr-attached}
 
-Having the GSR sensors attached, participants were seated in a comfortable office chair, which was adjusted according to their individual height. They were then led to fill out the initial game demographic questionnaire. To keep GSR sensors attached during the experiment, all questionnaires after attaching GSR sensors were filled out using the mouse and the same computer system. After the demographic questionnaire, participants were asked to self-assess their arousal, valence and dominance level using the self assessment manikin (SAM) questionnaire ~\cite{bradley1994measuring}. Filling initial questionnaires after attaching the GSR sensors was meant to give enough time (approximately 5 minutes) for the participant to get used to the sensors before playing the game. Participants were then taken on a tour of the game. Different game mechanics were shown to them, and they were given about 1 minute, to make themselves comfortable with the game and the controls. Some participants didn't need this time due to prior experience with FPS games (and Half-Life 2 in particular) and asked to shorten the familiarization time. Then, participants played the four different game conditions that were previously described (Control, Player, NPC Enemy, Environment). Players were told to kill as many zombies as possible, and to die as few times as possible. Participants were not told about the differences between conditions. Each game condition was set to take 5 minutes. After each condition, participants were asked to write their comments about particular changes they noticed under that condition and its effect on their gameplay. Then they were asked to complete the intrinsic motivation inventory (IMI) questionnaire, the player experience of need satisfaction (PENS) questionnaire and the game engagement questionnaire (GEQ ) to rate their experience. Filling the questionnaires between conditions was done during the first part of the minimum 7 minutes of resting time before the next condition began. The resting time was meant to restore the player's GSR signal to baseline levels; however, because I normalize GSR (see next section), a full resting GSR signal was not required prior to the next gameplay session. GSR sensors recorded players' signals during both the play and the resting sessions from the beginning of the first condition to the ending of the last condition. After completion of the experiment, the sensors were removed. Participants were debriefed and compensated \$15 Canadian dollars and escorted out of the lab.
+Having the GSR sensors attached, participants were seated in a comfortable office chair, which was adjusted according to their individual height. They were then led to fill out the initial game demographic questionnaire. To keep GSR sensors attached during the experiment, all questionnaires after attaching GSR sensors were filled out using the mouse and the same computer system. After the demographic questionnaire, participants were asked to self-assess their arousal, valence and dominance level using the self assessment manikin (SAM) questionnaire ~\cite{bradley1994measuring}. Filling initial questionnaires after attaching the GSR sensors was meant to give enough time (approximately 5 minutes) for the participant to get used to the sensors before playing the game. Participants were then taken on a tour of the game. Different game mechanics were shown to them, and they were given about 1 minute, to make themselves comfortable with the game and the controls. Some participants didn't need this time due to prior experience with FPS games (and Half-Life 2 in particular) and asked to shorten the familiarization time. Then, participants played the four different game conditions that were previously described (Control, Player, NPC Enemy, Environment). Players were told to kill as many zombies as possible, and to die as few times as possible. Participants were not told about the differences between conditions. Each game condition was set to take 5 minutes. After each condition, participants were asked to write their comments about particular changes they noticed under that condition and its effect on their gameplay. Then they were asked to complete the intrinsic motivation inventory (IMI) questionnaire and the player experience of need satisfaction (PENS) questionnaire to rate their experience. Filling the questionnaires between conditions was done during the first part of the minimum 7 minutes of resting time before the next condition began. The resting time was meant to restore the player's GSR signal to baseline levels; however, because I normalize GSR (see next section), a full resting GSR signal was not required prior to the next gameplay session. GSR sensors recorded players' signals during both the play and the resting sessions from the beginning of the first condition to the ending of the last condition. After completion of the experiment, the sensors were removed. Participants were debriefed and compensated \$15 Canadian dollars and escorted out of the lab.
 
 \largeimg
 {Starting buttons}
