thesis version for denfese

--- a/thesis/content/chp-3-video-games.tex
+++ b/thesis/content/chp-3-video-games.tex
@@ -1,6 +1,6 @@
 % 10 to 15 pages
 
-Playing video games is a kind of experiential entertainment would help people to have new internal experiences. The virtual world of video games let adults to play new roles and experience emotions. Games provide opportunities for the development and design of environments where the player can interactively experience various emotions and mental conditions. This interactive experience is in contrast to cinema and other more passive forms of entertainment.
+Playing video games as a kind of experiential entertainment would help people to have new internal experiences. The virtual world of video games let adults to play new roles and experience emotions. Games provide opportunities for the development and design of environments where the player can interactively experience various emotions and mental conditions. This interactive experience is in contrast to cinema and other more passive forms of entertainment.
 
 In computer games, gameplay is usually considered of key importance ~\cite{rollings2006fundamentals, malone1982makes}. One can define gameplay as the pattern defined through the game rules ~\cite{salen2004rules, pajares2008understanding} the connection between the player and the game ~\cite{laramee2002game} or challenges ~\cite{rollings2003andrew} presented by the game. Gameplay is not a singular entity, and can consist of many different elements. Gameplay is essentially a synergy that emerges from the inclusion of certain factors ~\cite{rollings2003andrew}. In absence of a broadly accepted definition for gameplay, my focus here is targeted on one core element \textit{challenge}. The sense of challenge in video games is a significant contribution to continued play. However the challenge gameplay element should be carefully adjusted for the targeted audience. The process of adjusting the challenge level of the game is usually referred to as game balancing. To balance the challenge level or difficulty scale of the game, designers must change many interrelated parameters to create a experience somewhere between too easy and boring and too hard and frustrating ~\cite{koster2013theory}. In this chapter, a history of related works investigating the relation between a game's difficulty level and various emotional states is provided.
 
